<resources>
    <string name="app_name">Practical_13_48_SQLite</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by Name</string>
</resources>